k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: catalyst
  labels:
    name: catalyst
    app.kubernetes.io/part-of: catalyst-ui
