k8s/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: catalyst-ui
  namespace: catalyst
  labels:
    app: catalyst-ui
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Catalyst UI"
    gethomepage.dev/description: "Component library & design system"
    gethomepage.dev/group: "Apps"
    gethomepage.dev/icon: "storybook.png"
    gethomepage.dev/href: "http://catalyst.talos00"
    gethomepage.dev/siteMonitor: "http://catalyst-ui.catalyst.svc.cluster.local:80"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`catalyst.talos00`)
      kind: Rule
      services:
        - name: catalyst-ui
          port: 80
